--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
+async-executor = "1.5.1"
 cgroups-rs = "0.3.2"
 clap = { version = "4.3.3", features = ["derive"] }
 env_logger = "0.10.0"
+futures-lite = "1.13.0"
+futures-util = "0.3.28"
 log = "0.4.19"
+netlink-proto = { version = "0.11.1", default-features = false, features = ["smol_socket"] }
 rand = "0.8.5"
+rtnetlink = { version = "0.12.0", default-features = false, features = ["smol_socket"] }
 unshare = "0.7.0"
