--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ futures-lite = "1.13.0"
 futures-util = "0.3.28"
 log = "0.4.19"
 netlink-proto = { version = "0.11.1", default-features = false, features = ["smol_socket"] }
+nix = "0.26.2"
 rand = "0.8.5"
 rtnetlink = { version = "0.12.0", default-features = false, features = ["smol_socket"] }
 unshare = "0.7.0"
